[gd_scene load_steps=11 format=3 uid="uid://bqi78vhexs7gv"]

[ext_resource type="Theme" uid="uid://dt4slcvh1rugo" path="res://theme.tres" id="1_2beuo"]
[ext_resource type="Script" path="res://controller.gd" id="1_51ox2"]
[ext_resource type="LabelSettings" uid="uid://tqv2bcmchynl" path="res://title.tres" id="2_n4yov"]
[ext_resource type="LabelSettings" uid="uid://dlyugr18qqu0t" path="res://shortcut_text.tres" id="4_1dvxd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_elvsy"]
content_margin_left = 3.0
content_margin_top = 7.0
content_margin_right = 7.0
content_margin_bottom = 7.0
bg_color = Color(0.16463, 0.16463, 0.16463, 1)
border_width_right = 3
border_blend = true
corner_radius_top_right = 7
corner_radius_bottom_right = 7
expand_margin_left = 8.0

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_udgk6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hjhdp"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v3pw2"]
bg_color = Color(0.294118, 0.294118, 0.294118, 1)

[sub_resource type="Gradient" id="Gradient_m5bjm"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_d0ttv"]
gradient = SubResource("Gradient_m5bjm")

[node name="Controller" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2beuo")
color = Color(0, 0.0784314, 0.0901961, 1)
script = ExtResource("1_51ox2")
metadata/_edit_vertical_guides_ = [841.0]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 7
theme_override_constants/margin_right = 7
theme_override_constants/margin_bottom = 7

[node name="MainHSplit" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2
split_offset = 255

[node name="LeftPanel" type="PanelContainer" parent="MarginContainer/MainHSplit"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_elvsy")

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/MainHSplit/LeftPanel"]
layout_mode = 2
follow_focus = true
horizontal_scroll_mode = 0

[node name="VBox" type="VBoxContainer" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="UpdateAvailableLabel" type="RichTextLabel" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
unique_name_in_owner = true
visible = false
layout_mode = 2
bbcode_enabled = true
text = "[color=pink][i]Update available! Get it at:
[url=https://voylin.itch.io/teledot]https://voylin.itch.io/teledot[/url][/i][/color]

"
fit_content = true

[node name="SettingsLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
text = "TITLE_SETTINGS"
label_settings = ExtResource("2_n4yov")

[node name="SettingsGrid" type="GridContainer" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="ScreensaverLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_SCREENSAVER"

[node name="ScreenSaverButton" type="Button" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Select"

[node name="ScrollSpeedLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_SCROLL_SPEED"

[node name="ScrollSpeedSpinBox" type="SpinBox" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
value = 18.0
alignment = 1

[node name="MirrorTextLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_MIRROR_TEXT"

[node name="MirrorOptionButton" type="OptionButton" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
selected = 1
popup/item_0/text = "No"
popup/item_0/id = 0
popup/item_1/text = "Yes"
popup/item_1/id = 1

[node name="MarginsLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_MARGINS"

[node name="MarginSpinBox" type="SpinBox" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
value = 50.0
alignment = 1

[node name="FontSizeLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_FONT_SIZE"

[node name="FontSizeSpinBox" type="SpinBox" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 200.0
value = 13.0
alignment = 1

[node name="ColorFontLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_COLOR_FONT"

[node name="FontColorPicker" type="ColorPickerButton" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 1)

[node name="ColorBackgroundLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_COLOR_BACKGROUND"

[node name="BackgroundColorPicker" type="ColorPickerButton" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="AlignmentLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_ALIGNMENT"

[node name="AlignmentOptionButton" type="OptionButton" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
selected = 0
popup/item_0/text = "Left"
popup/item_0/id = 0
popup/item_1/text = "Center"
popup/item_1/id = 1
popup/item_2/text = "Right"
popup/item_2/id = 2

[node name="LanguageLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
layout_mode = 2
text = "SETTING_LANGUAGE"

[node name="LanguageOptionButton" type="OptionButton" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid"]
unique_name_in_owner = true
layout_mode = 2
item_count = 4
selected = 0
popup/item_0/text = "English"
popup/item_0/id = 0
popup/item_1/text = "日本語"
popup/item_1/id = 1
popup/item_2/text = "Français"
popup/item_2/id = 2
popup/item_3/text = "中文"
popup/item_3/id = 3

[node name="RemoveFocusButton" type="Button" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
text = "Remove focus"

[node name="TopSeparator" type="HSeparator" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_udgk6")

[node name="ShortcutsLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
text = "TITLE_SHORTCUTS"
label_settings = ExtResource("2_n4yov")

[node name="ShortcutsGrid" type="GridContainer" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
theme_override_constants/h_separation = 7
columns = 2

[node name="ScreensaverLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_SCREENSAVER"

[node name="ScreensaverInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Ctrl+F"
label_settings = ExtResource("4_1dvxd")

[node name="PlayPauseLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_PLAY_PAUSE"

[node name="PlayPauseInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Space, Ctrl+Space"
label_settings = ExtResource("4_1dvxd")

[node name="MoveUpLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_GO_UP"

[node name="MoveUpInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Up arrow"
label_settings = ExtResource("4_1dvxd")

[node name="MoveDownLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_GO_DOWN"

[node name="MoveDownInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Down arrow"
label_settings = ExtResource("4_1dvxd")

[node name="IncreaseSpeedLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_INCREASE_SPEED"

[node name="IncreaseSpeedInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Left arrow"
label_settings = ExtResource("4_1dvxd")

[node name="DecreaseSpeedLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_DECREASE_SPEED"

[node name="DecreaseSpeedInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Right arrow"
label_settings = ExtResource("4_1dvxd")

[node name="JumpBeginningLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_JUMP_BEGINNING"

[node name="JumpBeginninInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Home"
label_settings = ExtResource("4_1dvxd")

[node name="JumpEndLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_JUMP_END"

[node name="JumpEndInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "End"
label_settings = ExtResource("4_1dvxd")

[node name="PageUpLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_PAGE_UP"

[node name="PageUpInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Page up"
label_settings = ExtResource("4_1dvxd")

[node name="PageDownLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "SHORTCUT_PAGE_DOWN"

[node name="PageDownInfoLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ShortcutsGrid"]
layout_mode = 2
text = "Page down"
label_settings = ExtResource("4_1dvxd")

[node name="BottomSeparator" type="HSeparator" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_udgk6")

[node name="NetworkingLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
text = "TITLE_NETWORKING"
label_settings = ExtResource("2_n4yov")

[node name="NetworkStatusLabel" type="RichTextLabel" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
text = "NETWORK_STATUS: [i][color=grey]NETWORK_STATUS_NO_CONNECTION[/color][/i]"
fit_content = true

[node name="NetworkingGrid" type="GridContainer" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
layout_mode = 2
columns = 2

[node name="AutoConnectLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid"]
layout_mode = 2
text = "NETWORK_AUTO_CONNECT"
horizontal_alignment = 2

[node name="AutoConnectButton" type="CheckBox" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid"]
unique_name_in_owner = true
layout_mode = 2

[node name="IPLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid"]
layout_mode = 2
text = "IP:"

[node name="IPLineEdit" type="LineEdit" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="PortLabel" type="Label" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid"]
visible = false
layout_mode = 2
text = "Port:"

[node name="PortLineEdit" type="LineEdit" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "55757"

[node name="ResetIP" type="Button" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "BUTTON_RESET_IP"

[node name="ConnectionButton" type="Button" parent="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "BUTTON_START_CONNECTION"

[node name="ScriptPanel" type="TabContainer" parent="MarginContainer/MainHSplit"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Script (ctrl+1)" type="TabBar" parent="MarginContainer/MainHSplit/ScriptPanel"]
layout_mode = 2

[node name="ScriptScroll" type="ScrollContainer" parent="MarginContainer/MainHSplit/ScriptPanel/Script (ctrl+1)"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScriptTextEdit" type="TextEdit" parent="MarginContainer/MainHSplit/ScriptPanel/Script (ctrl+1)/ScriptScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.164706, 0.164706, 0.164706, 1)
wrap_mode = 1

[node name="Preview (ctrl+2)" type="TabBar" parent="MarginContainer/MainHSplit/ScriptPanel"]
visible = false
layout_mode = 2

[node name="PreviewScroll" type="ScrollContainer" parent="MarginContainer/MainHSplit/ScriptPanel/Preview (ctrl+2)"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScriptPreview" type="RichTextLabel" parent="MarginContainer/MainHSplit/ScriptPanel/Preview (ctrl+2)/PreviewScroll"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_hjhdp")
bbcode_enabled = true
fit_content = true

[node name="Side-by-side (ctrl+3)" type="TabBar" parent="MarginContainer/MainHSplit/ScriptPanel"]
visible = false
layout_mode = 2

[node name="ScriptScroll" type="ScrollContainer" parent="MarginContainer/MainHSplit/ScriptPanel/Side-by-side (ctrl+3)"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainHSplit/ScriptPanel/Side-by-side (ctrl+3)/ScriptScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="sbsTextEdit" type="TextEdit" parent="MarginContainer/MainHSplit/ScriptPanel/Side-by-side (ctrl+3)/ScriptScroll/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/background_color = Color(0.164706, 0.164706, 0.164706, 1)
wrap_mode = 1

[node name="sbsPreview" type="RichTextLabel" parent="MarginContainer/MainHSplit/ScriptPanel/Side-by-side (ctrl+3)/ScriptScroll/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_v3pw2")
bbcode_enabled = true
fit_content = true

[node name="Screensaver" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScreensaverTexture" type="TextureRect" parent="Screensaver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_d0ttv")

[node name="FileDialog" type="FileDialog" parent="Screensaver/ScreensaverTexture"]

[connection signal="meta_clicked" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/UpdateAvailableLabel" to="." method="_on_update_available_label_meta_clicked"]
[connection signal="pressed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/ScreenSaverButton" to="." method="_on_screen_saver_button_pressed"]
[connection signal="value_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/ScrollSpeedSpinBox" to="." method="_on_scroll_speed_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/ScrollSpeedSpinBox" to="." method="_on_remove_focus_button_pressed"]
[connection signal="item_selected" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/MirrorOptionButton" to="." method="_on_remove_focus_button_pressed"]
[connection signal="item_selected" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/MirrorOptionButton" to="." method="_on_mirror_option_button_item_selected"]
[connection signal="value_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/MarginSpinBox" to="." method="_on_margin_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/MarginSpinBox" to="." method="_on_remove_focus_button_pressed"]
[connection signal="value_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/FontSizeSpinBox" to="." method="_on_font_size_spin_box_value_changed"]
[connection signal="value_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/FontSizeSpinBox" to="." method="_on_remove_focus_button_pressed"]
[connection signal="color_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/FontColorPicker" to="." method="_on_font_color_picker_changed"]
[connection signal="color_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/FontColorPicker" to="." method="_on_remove_focus_button_pressed"]
[connection signal="color_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/BackgroundColorPicker" to="." method="_on_background_color_picker_changed"]
[connection signal="color_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/BackgroundColorPicker" to="." method="_on_remove_focus_button_pressed"]
[connection signal="item_selected" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/AlignmentOptionButton" to="." method="_on_remove_focus_button_pressed"]
[connection signal="item_selected" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/AlignmentOptionButton" to="." method="_on_alignment_option_item_selected"]
[connection signal="item_selected" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/LanguageOptionButton" to="." method="_on_remove_focus_button_pressed"]
[connection signal="item_selected" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/SettingsGrid/LanguageOptionButton" to="." method="_on_language_option_button_item_selected"]
[connection signal="pressed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/RemoveFocusButton" to="." method="_on_remove_focus_button_pressed"]
[connection signal="toggled" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid/AutoConnectButton" to="." method="_on_auto_connect_button_toggled"]
[connection signal="text_changed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid/IPLineEdit" to="." method="_on_ip_line_edit_text_changed"]
[connection signal="text_submitted" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid/IPLineEdit" to="." method="_on_ip_line_edit_text_submitted"]
[connection signal="text_submitted" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/NetworkingGrid/PortLineEdit" to="." method="_on_port_line_edit_text_submitted"]
[connection signal="pressed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ResetIP" to="." method="_on_reset_ip_pressed"]
[connection signal="pressed" from="MarginContainer/MainHSplit/LeftPanel/ScrollContainer/VBox/ConnectionButton" to="." method="_on_connection_button_pressed"]
[connection signal="text_changed" from="MarginContainer/MainHSplit/ScriptPanel/Script (ctrl+1)/ScriptScroll/ScriptTextEdit" to="." method="_on_script_tab_text_changed"]
[connection signal="text_changed" from="MarginContainer/MainHSplit/ScriptPanel/Side-by-side (ctrl+3)/ScriptScroll/HBoxContainer/sbsTextEdit" to="." method="_on_sbs_tab_text_changed"]
